// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App create 1`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 clnBNg"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 hMMuhx"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 frbVGL"
      >
        <header
          class="StyledBox-sc-13pk1d4-0 gySOWu"
        >
          <div
            class="StyledGrid-sc-1wofa1l-0 beXRrX"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 cjyyBi"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 bnnKA-D"
            >
              <h1
                class="StyledHeading-sc-1rdh4aw-0 fojqDR"
              >
                grommet designer
              </h1>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 cSxXIP"
            >
              <p
                class="StyledParagraph-sc-tbetod-0 gBreDv"
              >
                design with grommet components
              </p>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 ddcblo"
            >
              <a
                class="StyledButton-sc-323bzc-0 hZnqdf"
                href="/_new"
                title="start a new design"
              >
                New
              </a>
            </div>
          </div>
        </header>
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 BJHnT"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 gVKSXH"
      >
        <span
          class="StyledText-sc-1sadyjn-0 iROVVa"
        >
          Hi, ... maybe create a new design?
        </span>
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 BJHnT"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 frbVGL"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 eStwGS FileInput__ContentsBox-sc-1jzq7im-0 coxECR"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 cAiEPz"
          >
            <span
              class="StyledText-sc-1sadyjn-0 gNeDsX FileInput__Message-sc-1jzq7im-2 bqMLbu"
            >
              Import - drop design file here
            </span>
            <a
              class="StyledAnchor-sc-1rp7lwl-0 cdWxns"
              tabindex="0"
            >
              browse
            </a>
          </div>
          <input
            accept=".json"
            class="StyledFileInput-sc-rl7ywv-0 kFAtTN"
            type="file"
          />
        </div>
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 BJHnT"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 jRHGEF"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 frbVGL"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 gHoOfe"
          >
            <h2
              class="StyledHeading-sc-1rdh4aw-0 evXIdU"
            >
              storage
            </h2>
            <div
              class="StyledBox__StyledBoxGap-sc-13pk1d4-1 jtYnpY"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 dEmnTc"
            >
              <svg
                class="StyledMeter-sc-nsxarx-0 kCzifM"
                height="24"
                preserveAspectRatio="none"
                viewBox="0 0 384 24"
                width="384"
              >
                <path
                  d="M 0,12 L 384,12"
                  fill="none"
                  stroke="#F2F2F2"
                  stroke-linecap="square"
                  stroke-opacity="0.4"
                  stroke-width="24"
                />
              </svg>
              <div
                class="StyledBox__StyledBoxGap-sc-13pk1d4-1 iISQcM"
              />
              <span
                class="StyledText-sc-1sadyjn-0 jbJJSg"
              >
                0 K total
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 BJHnT"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 frbVGL"
      >
        <footer
          class="StyledBox-sc-13pk1d4-0 eZIgAP"
        >
          <button
            aria-label="Change settings"
            class="StyledButton-sc-323bzc-0 wfYUD"
            type="button"
          >
            <svg
              aria-label="Brush"
              class="StyledIcon-sc-ofa7kd-0 jQvEgu"
              viewBox="0 0 24 24"
            >
              <path
                d="M9.312 11.73a5.001 5.001 0 0 0-5.362 1.12c-1.953 1.952-1.414 8.485-1.414 8.485s6.532.538 8.485-1.415a5.001 5.001 0 0 0 1.12-5.362L22.334 4.364a1.997 1.997 0 0 0 0-2.828 1.995 1.995 0 0 0-2.828 0L9.312 11.729zm1.002-1.617 1.838 1.838 1.697 1.697"
                fill="none"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </button>
        </footer>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`App create 2`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 clnBNg"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 hMMuhx"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 frbVGL"
      >
        <header
          class="StyledBox-sc-13pk1d4-0 kaQBDg"
        >
          <div
            class="StyledGrid-sc-1wofa1l-0 beXRrX"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 cjyyBi"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 bnnKA-D"
            >
              <h1
                class="StyledHeading-sc-1rdh4aw-0 fojqDR"
              >
                new design
              </h1>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 cSxXIP"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 ddcblo"
            >
              <button
                aria-label="cancel creating a new design"
                class="StyledButton-sc-323bzc-0 emhJYD"
                type="button"
              >
                <svg
                  aria-label="Close"
                  class="StyledIcon-sc-ofa7kd-0 jQvEgu"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="m3 3 18 18M3 21 21 3"
                    fill="none"
                    stroke="#000"
                    stroke-width="2"
                  />
                </svg>
              </button>
            </div>
          </div>
        </header>
        <form>
          <div
            class="StyledBox-sc-13pk1d4-0 YRIKN FormField__FormFieldBox-sc-m9hood-0 chvcoo"
          >
            <label
              class="StyledText-sc-1sadyjn-0 kKrMsX"
              for="name"
            >
              name
            </label>
            <div
              class="StyledBox-sc-13pk1d4-0 jHsdrv FormField__FormFieldContentBox-sc-m9hood-1 dSTFCs"
            >
              <div
                class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 edcgVv"
              >
                <input
                  autocomplete="off"
                  class="StyledTextInput-sc-1x30a0s-0 eWSUmi"
                  id="name"
                  name="name"
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 fKXWXg"
            id="startWith"
            role="radiogroup"
          >
            <label
              class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 drCFDy"
              for="startWith-start with a blank design"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 dsaTAw StyledRadioButton-sc-g1f6ld-5 djlZiT"
              >
                <input
                  checked=""
                  class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 jGzZeQ"
                  id="startWith-start with a blank design"
                  name="startWith"
                  tabindex="0"
                  type="radio"
                  value="start with a blank design"
                />
                <div
                  class="StyledBox-sc-13pk1d4-0 eUSyOa StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 iA-dCYh"
                >
                  <svg
                    class="StyledRadioButton__StyledRadioButtonIcon-sc-g1f6ld-3 jQYFeg"
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 24 24"
                  >
                    <circle
                      cx="12"
                      cy="12"
                      r="6"
                    />
                  </svg>
                </div>
              </div>
              <span
                class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
              >
                start with a blank design
              </span>
            </label>
            <div
              class="StyledBox__StyledBoxGap-sc-13pk1d4-1 iISQcM"
            />
            <label
              class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 drCFDy"
              for="startWith-duplicate an existing design"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 dsaTAw StyledRadioButton-sc-g1f6ld-5 djlZiT"
              >
                <input
                  class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 jGzZeQ"
                  id="startWith-duplicate an existing design"
                  name="startWith"
                  tabindex="-1"
                  type="radio"
                  value="duplicate an existing design"
                />
                <div
                  class="StyledBox-sc-13pk1d4-0 jDrtOq StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 iA-dCYh"
                />
              </div>
              <span
                class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
              >
                duplicate an existing design
              </span>
            </label>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 YRIKN FormField__FormFieldBox-sc-m9hood-0 chvcoo"
          >
            <label
              class="StyledText-sc-1sadyjn-0 kKrMsX"
            >
              theme
            </label>
            <div
              class="StyledBox-sc-13pk1d4-0 dkAvei FormField__FormFieldContentBox-sc-m9hood-1"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 euWtCA"
                role="radiogroup"
              >
                <label
                  class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 drCFDy"
                  for="grommet"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 dsaTAw StyledRadioButton-sc-g1f6ld-5 djlZiT"
                  >
                    <input
                      checked=""
                      class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 jGzZeQ"
                      id="grommet"
                      name="theme"
                      tabindex="0"
                      type="radio"
                      value="grommet"
                    />
                    <div
                      class="StyledBox-sc-13pk1d4-0 eUSyOa StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 iA-dCYh"
                    >
                      <svg
                        class="StyledRadioButton__StyledRadioButtonIcon-sc-g1f6ld-3 jQYFeg"
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 24 24"
                      >
                        <circle
                          cx="12"
                          cy="12"
                          r="6"
                        />
                      </svg>
                    </div>
                  </div>
                  <span
                    class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
                  >
                    grommet
                  </span>
                </label>
                <div
                  class="StyledBox__StyledBoxGap-sc-13pk1d4-1 iISQcM"
                />
                <label
                  class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 drCFDy"
                  for="hpe"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 dsaTAw StyledRadioButton-sc-g1f6ld-5 djlZiT"
                  >
                    <input
                      class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 jGzZeQ"
                      id="hpe"
                      name="theme"
                      tabindex="-1"
                      type="radio"
                      value="hpe"
                    />
                    <div
                      class="StyledBox-sc-13pk1d4-0 jDrtOq StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 iA-dCYh"
                    />
                  </div>
                  <span
                    class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
                  >
                    hpe
                  </span>
                </label>
                <div
                  class="StyledBox__StyledBoxGap-sc-13pk1d4-1 iISQcM"
                />
                <label
                  class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 drCFDy"
                  for="other"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 dsaTAw StyledRadioButton-sc-g1f6ld-5 djlZiT"
                  >
                    <input
                      class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 jGzZeQ"
                      id="other"
                      name="theme"
                      tabindex="-1"
                      type="radio"
                      value="other"
                    />
                    <div
                      class="StyledBox-sc-13pk1d4-0 jDrtOq StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 iA-dCYh"
                    />
                  </div>
                  <span
                    class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
                  >
                    other
                  </span>
                </label>
              </div>
            </div>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 YRIKN FormField__FormFieldBox-sc-m9hood-0 chvcoo"
          >
            <label
              class="StyledText-sc-1sadyjn-0 kKrMsX"
              for="includes"
            >
              include other designs to be able to copy their components
            </label>
            <div
              class="StyledBox-sc-13pk1d4-0 jHsdrv FormField__FormFieldContentBox-sc-m9hood-1"
            >
              <button
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-label="none"
                class="StyledButton-sc-323bzc-0 fAHGkw StyledSelect__StyledSelectDropButton-sc-znp66n-5 jgXmKI"
                type="button"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 hMXKog"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 hWKKwG"
                  >
                    <div
                      class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 edcgVv"
                    >
                      <input
                        autocomplete="off"
                        class="StyledTextInput-sc-1x30a0s-0 eWSUmi StyledSelect__SelectTextInput-sc-znp66n-4 HENwL"
                        name="includes"
                        placeholder="none"
                        readonly=""
                        tabindex="-1"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                  <div
                    class="StyledBox-sc-13pk1d4-0 kXoZXT"
                    style="min-width: auto;"
                  >
                    <svg
                      aria-label="FormDown"
                      class="StyledIcon-sc-ofa7kd-0 eTQGBW"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="m18 9-6 6-6-6"
                        fill="none"
                        stroke="#000"
                        stroke-width="2"
                      />
                    </svg>
                  </div>
                </div>
              </button>
            </div>
          </div>
          <footer
            class="StyledBox-sc-13pk1d4-0 jRqWAH"
          >
            <button
              class="StyledButton-sc-323bzc-0 hZnqdf"
              title="create design"
              type="submit"
            >
              Create Design
            </button>
          </footer>
        </form>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`App create 3`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 clnBNg"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 hMMuhx"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 frbVGL"
      >
        <header
          class="StyledBox-sc-13pk1d4-0 kaQBDg"
        >
          <div
            class="StyledGrid-sc-1wofa1l-0 beXRrX"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 cjyyBi"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 bnnKA-D"
            >
              <h1
                class="StyledHeading-sc-1rdh4aw-0 fojqDR"
              >
                new design
              </h1>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 cSxXIP"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 ddcblo"
            >
              <button
                aria-label="cancel creating a new design"
                class="StyledButton-sc-323bzc-0 emhJYD"
                type="button"
              >
                <svg
                  aria-label="Close"
                  class="StyledIcon-sc-ofa7kd-0 jQvEgu"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="m3 3 18 18M3 21 21 3"
                    fill="none"
                    stroke="#000"
                    stroke-width="2"
                  />
                </svg>
              </button>
            </div>
          </div>
        </header>
        <form>
          <div
            class="StyledBox-sc-13pk1d4-0 YRIKN FormField__FormFieldBox-sc-m9hood-0 chvcoo"
          >
            <label
              class="StyledText-sc-1sadyjn-0 kKrMsX"
              for="name"
            >
              name
            </label>
            <div
              class="StyledBox-sc-13pk1d4-0 jHsdrv FormField__FormFieldContentBox-sc-m9hood-1 dSTFCs"
            >
              <div
                class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 edcgVv"
              >
                <input
                  autocomplete="off"
                  class="StyledTextInput-sc-1x30a0s-0 eWSUmi"
                  id="name"
                  name="name"
                  value="test design"
                />
              </div>
            </div>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 fKXWXg"
            id="startWith"
            role="radiogroup"
          >
            <label
              class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 drCFDy"
              for="startWith-start with a blank design"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 dsaTAw StyledRadioButton-sc-g1f6ld-5 djlZiT"
              >
                <input
                  checked=""
                  class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 jGzZeQ"
                  id="startWith-start with a blank design"
                  name="startWith"
                  tabindex="0"
                  type="radio"
                  value="start with a blank design"
                />
                <div
                  class="StyledBox-sc-13pk1d4-0 eUSyOa StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 iA-dCYh"
                >
                  <svg
                    class="StyledRadioButton__StyledRadioButtonIcon-sc-g1f6ld-3 jQYFeg"
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 24 24"
                  >
                    <circle
                      cx="12"
                      cy="12"
                      r="6"
                    />
                  </svg>
                </div>
              </div>
              <span
                class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
              >
                start with a blank design
              </span>
            </label>
            <div
              class="StyledBox__StyledBoxGap-sc-13pk1d4-1 iISQcM"
            />
            <label
              class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 drCFDy"
              for="startWith-duplicate an existing design"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 dsaTAw StyledRadioButton-sc-g1f6ld-5 djlZiT"
              >
                <input
                  class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 jGzZeQ"
                  id="startWith-duplicate an existing design"
                  name="startWith"
                  tabindex="-1"
                  type="radio"
                  value="duplicate an existing design"
                />
                <div
                  class="StyledBox-sc-13pk1d4-0 jDrtOq StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 iA-dCYh"
                />
              </div>
              <span
                class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
              >
                duplicate an existing design
              </span>
            </label>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 YRIKN FormField__FormFieldBox-sc-m9hood-0 chvcoo"
          >
            <label
              class="StyledText-sc-1sadyjn-0 kKrMsX"
            >
              theme
            </label>
            <div
              class="StyledBox-sc-13pk1d4-0 dkAvei FormField__FormFieldContentBox-sc-m9hood-1"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 euWtCA"
                role="radiogroup"
              >
                <label
                  class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 drCFDy"
                  for="grommet"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 dsaTAw StyledRadioButton-sc-g1f6ld-5 djlZiT"
                  >
                    <input
                      checked=""
                      class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 jGzZeQ"
                      id="grommet"
                      name="theme"
                      tabindex="0"
                      type="radio"
                      value="grommet"
                    />
                    <div
                      class="StyledBox-sc-13pk1d4-0 eUSyOa StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 iA-dCYh"
                    >
                      <svg
                        class="StyledRadioButton__StyledRadioButtonIcon-sc-g1f6ld-3 jQYFeg"
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 24 24"
                      >
                        <circle
                          cx="12"
                          cy="12"
                          r="6"
                        />
                      </svg>
                    </div>
                  </div>
                  <span
                    class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
                  >
                    grommet
                  </span>
                </label>
                <div
                  class="StyledBox__StyledBoxGap-sc-13pk1d4-1 iISQcM"
                />
                <label
                  class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 drCFDy"
                  for="hpe"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 dsaTAw StyledRadioButton-sc-g1f6ld-5 djlZiT"
                  >
                    <input
                      class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 jGzZeQ"
                      id="hpe"
                      name="theme"
                      tabindex="-1"
                      type="radio"
                      value="hpe"
                    />
                    <div
                      class="StyledBox-sc-13pk1d4-0 jDrtOq StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 iA-dCYh"
                    />
                  </div>
                  <span
                    class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
                  >
                    hpe
                  </span>
                </label>
                <div
                  class="StyledBox__StyledBoxGap-sc-13pk1d4-1 iISQcM"
                />
                <label
                  class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 drCFDy"
                  for="other"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 dsaTAw StyledRadioButton-sc-g1f6ld-5 djlZiT"
                  >
                    <input
                      class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 jGzZeQ"
                      id="other"
                      name="theme"
                      tabindex="-1"
                      type="radio"
                      value="other"
                    />
                    <div
                      class="StyledBox-sc-13pk1d4-0 jDrtOq StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 iA-dCYh"
                    />
                  </div>
                  <span
                    class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
                  >
                    other
                  </span>
                </label>
              </div>
            </div>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 YRIKN FormField__FormFieldBox-sc-m9hood-0 chvcoo"
          >
            <label
              class="StyledText-sc-1sadyjn-0 kKrMsX"
              for="includes"
            >
              include other designs to be able to copy their components
            </label>
            <div
              class="StyledBox-sc-13pk1d4-0 jHsdrv FormField__FormFieldContentBox-sc-m9hood-1"
            >
              <button
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-label="none"
                class="StyledButton-sc-323bzc-0 fAHGkw StyledSelect__StyledSelectDropButton-sc-znp66n-5 jgXmKI"
                type="button"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 hMXKog"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 hWKKwG"
                  >
                    <div
                      class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 edcgVv"
                    >
                      <input
                        autocomplete="off"
                        class="StyledTextInput-sc-1x30a0s-0 eWSUmi StyledSelect__SelectTextInput-sc-znp66n-4 HENwL"
                        name="includes"
                        placeholder="none"
                        readonly=""
                        tabindex="-1"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                  <div
                    class="StyledBox-sc-13pk1d4-0 kXoZXT"
                    style="min-width: auto;"
                  >
                    <svg
                      aria-label="FormDown"
                      class="StyledIcon-sc-ofa7kd-0 eTQGBW"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="m18 9-6 6-6-6"
                        fill="none"
                        stroke="#000"
                        stroke-width="2"
                      />
                    </svg>
                  </div>
                </div>
              </button>
            </div>
          </div>
          <footer
            class="StyledBox-sc-13pk1d4-0 jRqWAH"
          >
            <button
              class="StyledButton-sc-323bzc-0 hZnqdf"
              title="create design"
              type="submit"
            >
              Create Design
            </button>
          </footer>
        </form>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`App create 4`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 clnBNg"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 kwpsfL"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 oMroE"
      >
        <form>
          <div
            class="StyledBox-sc-13pk1d4-0 YRIKN FormField__FormFieldBox-sc-m9hood-0 chvcoo"
          >
            <label
              class="StyledText-sc-1sadyjn-0 kKrMsX"
              for="template"
            >
              screen template
            </label>
            <div
              class="StyledBox-sc-13pk1d4-0 jHsdrv FormField__FormFieldContentBox-sc-m9hood-1"
            >
              <button
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-label="Open Drop; Selected: [object Object]"
                class="StyledButton-sc-323bzc-0 fAHGkw StyledSelect__StyledSelectDropButton-sc-znp66n-5 jgXmKI"
                id="template"
                type="button"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 hMXKog"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 hWKKwG"
                  >
                    <div
                      class="StyledBox-sc-13pk1d4-0 hHtUmt"
                    >
                      <span
                        class="StyledText-sc-1sadyjn-0 hDSAIu"
                      >
                        empty page
                      </span>
                      <div
                        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 iISQcM"
                      />
                      <span
                        class="StyledText-sc-1sadyjn-0 buVJqj"
                      >
                        generic
                      </span>
                    </div>
                    <input
                      class="StyledSelect__HiddenInput-sc-znp66n-2 brqHPY"
                      id="template__input"
                      name="template"
                      readonly=""
                      type="text"
                      value=""
                    />
                  </div>
                  <div
                    class="StyledBox-sc-13pk1d4-0 kXoZXT"
                    style="min-width: auto;"
                  >
                    <svg
                      aria-label="FormDown"
                      class="StyledIcon-sc-ofa7kd-0 eTQGBW"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="m18 9-6 6-6-6"
                        fill="none"
                        stroke="#000"
                        stroke-width="2"
                      />
                    </svg>
                  </div>
                </div>
              </button>
            </div>
          </div>
          <footer
            class="StyledBox-sc-13pk1d4-0 ibwAOg"
          >
            <button
              class="StyledButton-sc-323bzc-0 hZnqdf"
              title="Use selected screen template"
              type="submit"
            >
              Use Template
            </button>
          </footer>
        </form>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`App create 5`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 clnBNg"
  >
    <div
      class="StyledGrommet-sc-19lkkz7-0 kzRLTw"
      id="designer-canvas"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 goUpaj"
        id="2"
        style="outline: 1px dashed red;"
        tabindex="-1"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 fETLPD"
          id="3"
          tabindex="-1"
        >
          <div
            class="sc-gswNZR fhKaF"
          >
            <p
              class="StyledParagraph-sc-tbetod-0 bEOruc"
            >
              This PageContent is currently empty. Add some content to it.
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
